Compile every module through jk's own javac, not only the ones with processors
ProvenanceJavac already compiles through a file manager held across compiles;
Zinc's JavaCompiler.local opens one per compile and re-indexes the whole classpath
with it. Only 6 of this tree's 38 modules declare a processor path, so most
compiles were taking the path that pays that cost every time.

Widening it has to preserve two things it did not previously have to. Processors
are installed only when there are any: setProcessors with an empty list turns
annotation processing off outright, so a module asking for -proc:full would
silently lose a processor registered on its own compile classpath. And a source
that is not a PathBasedFile is now refused rather than skipped, because dropping
one would ship a jar with a class missing and no diagnostic naming it.